{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 453,
  "lineage": "b004a5ce-71e4-8a05-6943-20713d1a4d6d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091f22a360915c84d",
            "arn": "arn:aws:ec2:us-east-1:993508681559:elastic-ip/eipalloc-091f22a360915c84d",
            "association_id": "eipassoc-05bc07b5fca23016b",
            "domain": "vpc",
            "id": "eipalloc-091f22a360915c84d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0847b30edbc924991",
            "private_dns": "ip-10-0-1-102.ec2.internal",
            "private_ip": "10.0.1.102",
            "public_dns": "ec2-107-23-241-251.compute-1.amazonaws.com",
            "public_ip": "107.23.241.251",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "strapi-project-nat-eip"
            },
            "tags_all": {
              "Name": "strapi-project-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "strapi_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:993508681559:instance/i-01badf79045c79f1f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "strapi-project-ec2-profile",
            "id": "i-01badf79045c79f1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "strapi-project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ef150f9efa86aa50"
              }
            ],
            "primary_network_interface_id": "eni-0ef150f9efa86aa50",
            "private_dns": "ip-10-0-10-186.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.186",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07e9c071133d951c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005170e2fa34bd374",
            "tags": {
              "Name": "strapi-project-ec2"
            },
            "tags_all": {
              "Name": "strapi-project-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c53de4c777b0fcc5"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "993508681559",
            "id": "i-01badf79045c79f1f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_internet_gateway.gw",
            "aws_key_pair.kp",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.alb_sg",
            "aws_security_group.strapi_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ssm_parameter.ubuntu_ami",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993508681559:internet-gateway/igw-00b55fe7d26b99187",
            "id": "igw-00b55fe7d26b99187",
            "owner_id": "993508681559",
            "region": "us-east-1",
            "tags": {
              "Name": "strapi-project-igw"
            },
            "tags_all": {
              "Name": "strapi-project-igw"
            },
            "vpc_id": "vpc-0a91209c88ebc6dac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "strapi_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993508681559:loadbalancer/app/strapi-project-alb/03503dc55824f789",
            "arn_suffix": "app/strapi-project-alb/03503dc55824f789",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "strapi-project-alb-859140182.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993508681559:loadbalancer/app/strapi-project-alb/03503dc55824f789",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "strapi-project-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-016600264c5579397"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06969bb0a8e7ee701"
              },
              {
                "subnet_id": "subnet-0a0184d75ae98b6d8"
              }
            ],
            "subnets": [
              "subnet-06969bb0a8e7ee701",
              "subnet-0a0184d75ae98b6d8"
            ],
            "tags": {
              "Name": "strapi-project-alb"
            },
            "tags_all": {
              "Name": "strapi-project-alb"
            },
            "vpc_id": "vpc-0a91209c88ebc6dac",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993508681559:loadbalancer/app/strapi-project-alb/03503dc55824f789"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993508681559:listener/app/strapi-project-alb/03503dc55824f789/532b7d521769343b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993508681559:targetgroup/strapi-project-tg/8b0fcb541a980e27",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993508681559:listener/app/strapi-project-alb/03503dc55824f789/532b7d521769343b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:993508681559:loadbalancer/app/strapi-project-alb/03503dc55824f789",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993508681559:listener/app/strapi-project-alb/03503dc55824f789/532b7d521769343b"
          },
          "dependencies": [
            "aws_lb.strapi_alb",
            "aws_lb_target_group.strapi_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "strapi_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993508681559:targetgroup/strapi-project-tg/8b0fcb541a980e27",
            "arn_suffix": "targetgroup/strapi-project-tg/8b0fcb541a980e27",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993508681559:targetgroup/strapi-project-tg/8b0fcb541a980e27",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:993508681559:loadbalancer/app/strapi-project-alb/03503dc55824f789"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "strapi-project-tg",
            "port": 1337,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "strapi-project-tg"
            },
            "tags_all": {
              "Name": "strapi-project-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a91209c88ebc6dac"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993508681559:targetgroup/strapi-project-tg/8b0fcb541a980e27"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "strapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:993508681559:targetgroup/strapi-project-tg/8b0fcb541a980e27-20260206112912450400000005",
            "port": 1337,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993508681559:targetgroup/strapi-project-tg/8b0fcb541a980e27",
            "target_id": "i-01badf79045c79f1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_instance.strapi_app",
            "aws_internet_gateway.gw",
            "aws_key_pair.kp",
            "aws_lb_target_group.strapi_tg",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.alb_sg",
            "aws_security_group.strapi_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ssm_parameter.ubuntu_ami",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091f22a360915c84d",
            "association_id": "eipassoc-05bc07b5fca23016b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0670c54d46a4b7cb0",
            "network_interface_id": "eni-0847b30edbc924991",
            "private_ip": "10.0.1.102",
            "public_ip": "107.23.241.251",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06969bb0a8e7ee701",
            "tags": {
              "Name": "strapi-project-nat-gw"
            },
            "tags_all": {
              "Name": "strapi-project-nat-gw"
            },
            "vpc_id": "vpc-0a91209c88ebc6dac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993508681559:route-table/rtb-03667d6a576c00966",
            "id": "rtb-03667d6a576c00966",
            "owner_id": "993508681559",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0670c54d46a4b7cb0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "strapi-project-private-rt"
            },
            "tags_all": {
              "Name": "strapi-project-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a91209c88ebc6dac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "993508681559",
            "id": "rtb-03667d6a576c00966",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993508681559:route-table/rtb-05ec371cc6ef7cdf1",
            "id": "rtb-05ec371cc6ef7cdf1",
            "owner_id": "993508681559",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00b55fe7d26b99187",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "strapi-project-public-rt"
            },
            "tags_all": {
              "Name": "strapi-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a91209c88ebc6dac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "993508681559",
            "id": "rtb-05ec371cc6ef7cdf1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0519f0e545d7798b6",
            "region": "us-east-1",
            "route_table_id": "rtb-03667d6a576c00966",
            "subnet_id": "subnet-005170e2fa34bd374"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01620b0c2db02cdf8",
            "region": "us-east-1",
            "route_table_id": "rtb-03667d6a576c00966",
            "subnet_id": "subnet-0d3ffbbe5fe40f1f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c6856af594eb032",
            "region": "us-east-1",
            "route_table_id": "rtb-05ec371cc6ef7cdf1",
            "subnet_id": "subnet-06969bb0a8e7ee701"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad50edbd1b277bdd",
            "region": "us-east-1",
            "route_table_id": "rtb-05ec371cc6ef7cdf1",
            "subnet_id": "subnet-0a0184d75ae98b6d8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993508681559:security-group/sg-016600264c5579397",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016600264c5579397",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "strapi-project-alb-sg",
            "name_prefix": "",
            "owner_id": "993508681559",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "strapi-project-alb-sg"
            },
            "tags_all": {
              "Name": "strapi-project-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a91209c88ebc6dac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "993508681559",
            "id": "sg-016600264c5579397",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "strapi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993508681559:security-group/sg-0c53de4c777b0fcc5",
            "description": "Security group for Strapi EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c53de4c777b0fcc5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Strapi from ALB only",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-016600264c5579397"
                ],
                "self": false,
                "to_port": 1337
              }
            ],
            "name": "strapi-project-ec2-sg",
            "name_prefix": "",
            "owner_id": "993508681559",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "strapi-project-ec2-sg"
            },
            "tags_all": {
              "Name": "strapi-project-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a91209c88ebc6dac"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "993508681559",
            "id": "sg-0c53de4c777b0fcc5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993508681559:subnet/subnet-005170e2fa34bd374",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005170e2fa34bd374",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "993508681559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "strapi-project-private-subnet-1"
            },
            "tags_all": {
              "Name": "strapi-project-private-subnet-1"
            },
            "vpc_id": "vpc-0a91209c88ebc6dac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "993508681559",
            "id": "subnet-005170e2fa34bd374",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993508681559:subnet/subnet-0d3ffbbe5fe40f1f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3ffbbe5fe40f1f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "993508681559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "strapi-project-private-subnet-2"
            },
            "tags_all": {
              "Name": "strapi-project-private-subnet-2"
            },
            "vpc_id": "vpc-0a91209c88ebc6dac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "993508681559",
            "id": "subnet-0d3ffbbe5fe40f1f3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993508681559:subnet/subnet-06969bb0a8e7ee701",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06969bb0a8e7ee701",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993508681559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "strapi-project-public-subnet-1"
            },
            "tags_all": {
              "Name": "strapi-project-public-subnet-1"
            },
            "vpc_id": "vpc-0a91209c88ebc6dac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "993508681559",
            "id": "subnet-06969bb0a8e7ee701",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993508681559:subnet/subnet-0a0184d75ae98b6d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0184d75ae98b6d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993508681559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "strapi-project-public-subnet-2"
            },
            "tags_all": {
              "Name": "strapi-project-public-subnet-2"
            },
            "vpc_id": "vpc-0a91209c88ebc6dac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "993508681559",
            "id": "subnet-0a0184d75ae98b6d8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993508681559:vpc/vpc-0a91209c88ebc6dac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08df65f34836cab24",
            "default_route_table_id": "rtb-0af746eafbaea9f5c",
            "default_security_group_id": "sg-08bd06b6934807f9f",
            "dhcp_options_id": "dopt-0c8687e286f053cce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a91209c88ebc6dac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af746eafbaea9f5c",
            "owner_id": "993508681559",
            "region": "us-east-1",
            "tags": {
              "Name": "strapi-project-vpc"
            },
            "tags_all": {
              "Name": "strapi-project-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "993508681559",
            "id": "vpc-0a91209c88ebc6dac",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}